SPM: Rename 'spm/common' into 'spm/ffm'
The name 'common' confused a bit, as its real purpose is for general
FF-M API implementation. Rename this folder as the first step for
re-structure patches.

There are some 'common' folder legacies still in the renamed 'ffm'
folder. They will be updated in the following patches.

Change-Id: Ic72fcf9ecf47f2185a82761edfdcbcd3c4569421
Signed-off-by: Ken Liu <Ken.Liu@arm.com>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2021, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -31,20 +31,20 @@ target_include_directories(tfm_spm
 
 target_sources(tfm_spm
     PRIVATE
-        common/tfm_boot_data.c
-        common/tfm_core_utils.c
-        common/utilities.c
-        $<$<NOT:$<STREQUAL:${TFM_SPM_LOG_LEVEL},${TFM_SPM_LOG_LEVEL_SILENCE}>>:common/spm_log.c>
+        ffm/tfm_boot_data.c
+        ffm/tfm_core_utils.c
+        ffm/utilities.c
+        $<$<NOT:$<STREQUAL:${TFM_SPM_LOG_LEVEL},${TFM_SPM_LOG_LEVEL_SILENCE}>>:ffm/spm_log.c>
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:cmsis_psa/tfm_multi_core.c>
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:cmsis_psa/tfm_multi_core_mem_check.c>
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:cmsis_psa/tfm_rpc.c>
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:cmsis_psa/tfm_spe_mailbox.c>
-        $<$<NOT:$<BOOL:${TFM_PSA_API}>>:common/tfm_core_mem_check.c>
+        $<$<NOT:$<BOOL:${TFM_PSA_API}>>:ffm/tfm_core_mem_check.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/arch/tfm_arch.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/main.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/spm_ipc.c>
-        $<$<BOOL:${TFM_PSA_API}>:common/spm_psa_client_call.c>
-        $<$<BOOL:${TFM_PSA_API}>:common/psa_client_service_apis.c>
+        $<$<BOOL:${TFM_PSA_API}>:ffm/spm_psa_client_call.c>
+        $<$<BOOL:${TFM_PSA_API}>:ffm/psa_client_service_apis.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/tfm_core_svcalls_ipc.c>
         $<$<AND:$<BOOL:${TFM_PSA_API}>,$<NOT:$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>>>:cmsis_psa/tfm_nspm_ipc.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/tfm_pools.c>
