Service: Create an example FF-M v1.1  partition
An example partition is created for testing FF-M v1.1 stateless
handle, only enabled in IPC model. It is also for future use.

Change-Id: I699bb23a24bc555b2d8769001b931f2d2c42277b
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -256,9 +256,24 @@
       "pid": 271,
       "linker_pattern": {
         "library_list": [
-           "*tfm_*partition_fwu*"
+          "*tfm_*partition_fwu*"
          ]
       }
-    }
+    },
+    {
+      "name": "TFM FFM11 Partition Service",
+      "short_name": "TFM_SP_FFM11",
+      "manifest": "secure_fw/partitions/tfm_ffm11_partition/tfm_ffm11_partition.yaml",
+      "tfm_partition_ipc": true,
+      "conditional": "TFM_PARTITION_FFM11",
+      "version_major": 0,
+      "version_minor": 1,
+      "pid": 272,
+      "linker_pattern": {
+        "library_list": [
+          "*tfm_*partition_ffm11.*"
+        ]
+      }
+    },
   ]
 }
