--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory(partitions/internal_trusted_storage)
 add_subdirectory(partitions/platform)
 add_subdirectory(partitions/psa_proxy)
 add_subdirectory(partitions/firmware_update)
+add_subdirectory(partitions/tfm_ffm11_partition)
 add_subdirectory(spm)
 
 target_include_directories(secure_fw
