--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,6 +198,19 @@ if (CONFIG_BUILD_WITH_TFM)
   if (CONFIG_TFM_PROFILE)
     set(TFM_PROFILE_ARG BUILD_PROFILE ${CONFIG_TFM_PROFILE})
   endif()
+  if (DEFINED CONFIG_TFM_MCUBOOT_IMAGE_NUMBER)
+    set(TFM_IMAGE_NUMBER_ARG
+        MCUBOOT_IMAGE_NUMBER ${CONFIG_TFM_MCUBOOT_IMAGE_NUMBER})
+  endif()
+  if (CONFIG_TFM_CMAKE_BUILD_TYPE_RELEASE)
+    set(TFM_CMAKE_BUILD_TYPE "Release")
+  elseif (CONFIG_TFM_CMAKE_BUILD_TYPE_MINSIZEREL)
+    set(TFM_CMAKE_BUILD_TYPE "MinSizeRel")
+  elseif (CONFIG_TFM_CMAKE_BUILD_TYPE_DEBUG)
+    set(TFM_CMAKE_BUILD_TYPE "Debug")
+  elseif (CONFIG_TFM_CMAKE_BUILD_TYPE_RELWITHDEBINFO)
+    set(TFM_CMAKE_BUILD_TYPE "RelWithDebInfo")
+  endif()
 
   trusted_firmware_build(
     BINARY_DIR ${CMAKE_BINARY_DIR}/tfm
@@ -207,6 +220,7 @@ if (CONFIG_BUILD_WITH_TFM)
     ${TFM_BL2_ARG}
     ${TFM_IPC_ARG}
     ${TFM_REGRESSION_ARG}
+    CMAKE_BUILD_TYPE ${TFM_CMAKE_BUILD_TYPE}
   )
 
   zephyr_link_libraries(tfm_api)
