SPM: Change partition platform data binding
- Rename the long name 'tfm_spm_partition_platform_data_t'
  to 'platform_data_t'.
- Platform data list is now part of partition static data.
- Update related init logic related to this name and position
  change.

Change-Id: I1676f35b53f9c3074a70ab4fb68673a347bd422f
Signed-off-by: Ken Liu <Ken.Liu@arm.com>

--- a/secure_fw/spm/cmsis_func/tfm_spm_db_func.inc.template
+++ b/secure_fw/spm/cmsis_func/tfm_spm_db_func.inc.template
@@ -179,7 +179,7 @@ const struct spm_partition_static_data_t static_data_list[] =
         {% if partition.attr.conditional %}
 #ifdef {{partition.attr.conditional}}
         {% endif %}
-const struct tfm_spm_partition_platform_data_t *
+const struct platform_data_t *
     platform_data_list_{{partition.manifest.name}}[] =
 {
         {% for region in partition.manifest.mmio_regions %}
@@ -199,7 +199,7 @@ const struct tfm_spm_partition_platform_data_t *
 
     {% endif %}
 {% endfor %}
-const struct tfm_spm_partition_platform_data_t **platform_data_list_list[] =
+const struct platform_data_t **platform_data_list_list[] =
 {
     NULL,
     NULL,
