CMakeLists.txt: Use new TFM_BL2 kconfig
Change the symbol usage.

Signed-off-by: Øyvind Rønningstad <oyvind.ronningstad@nordicsemi.no>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,9 +187,9 @@ if (CONFIG_BUILD_WITH_TFM)
   if (CONFIG_TFM_REGRESSION)
     set(TFM_REGRESSION_ARG REGRESSION)
   endif()
-  if (CONFIG_TFM_BL2_TRUE)
+  if (CONFIG_TFM_BL2)
     set(TFM_BL2_ARG BL2 True)
-  elseif (CONFIG_TFM_BL2_FALSE)
+  else()
     set(TFM_BL2_ARG BL2 False)
   endif()
   if (CONFIG_TFM_ISOLATION_LEVEL)
