SPM: Add fault injection protection support in Library model
Create a reference implementation of fault injection protection in
Library model SPM initialization.

Signed-off-by: Tamas Ban <tamas.ban@arm.com>
Co-authorized-by: David Hu <david.hu@arm.com>
Change-Id: Ifa4a83bfb9a43de785cee27a13a783a52cf47c7c

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -86,6 +86,7 @@ target_link_libraries(tfm_spm
         $<$<STREQUAL:${TEST_PSA_API},IPC>:tfm_psa_rot_partition_driver_partition>
         $<$<STREQUAL:${TEST_PSA_API},IPC>:tfm_app_rot_partition_client_partition>
         $<$<STREQUAL:${TEST_PSA_API},IPC>:tfm_app_rot_partition_server_partition>
+        $<$<NOT:$<BOOL:${TFM_PSA_API}>>:tfm_fih>
 )
 
 target_compile_definitions(tfm_spm
