--- a/secure_fw/partitions/lib/sprt/CMakeLists.txt
+++ b/secure_fw/partitions/lib/sprt/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2021, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -21,8 +21,8 @@ target_sources(tfm_sprt
         ./crt_memmove.c
         ./crt_memset.c
         ./service_api.c
-        $<$<NOT:$<STREQUAL:${TFM_PARTITION_LOG_LEVEL},${TFM_PARTITION_LOG_LEVEL_SILENCE}>>:./tfm_sp_log_raw.c>
-        $<$<NOT:$<STREQUAL:${TFM_PARTITION_LOG_LEVEL},${TFM_PARTITION_LOG_LEVEL_SILENCE}>>:${CMAKE_SOURCE_DIR}/platform/ext/common/tfm_hal_sp_logdev_periph.c>
+        $<$<NOT:$<STREQUAL:${TFM_PARTITION_LOG_LEVEL},TFM_PARTITION_LOG_LEVEL_SILENCE>>:./tfm_sp_log_raw.c>
+        $<$<NOT:$<STREQUAL:${TFM_PARTITION_LOG_LEVEL},TFM_PARTITION_LOG_LEVEL_SILENCE>>:${CMAKE_SOURCE_DIR}/platform/ext/common/tfm_hal_sp_logdev_periph.c>
         $<$<BOOL:${TFM_SP_META_PTR_ENABLE}>:./sprt_partition_metadata_indicator.c>
 )
 
