TZ: Add configuration switch for PXN
PXN is a feature for armv8.1. Make it as an optional feature.
Default value is 'OFF'. Set 'TFM_PXN_ENABLE' to 'ON' when use it.

Change-Id: I3c7a15908dc37a9617894b2a0a53c7fcb1f35e2c
Signed-off-by: Summer Qin <summer.qin@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -68,6 +68,7 @@ target_compile_definitions(platform_s
     PRIVATE
         $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:SYMMETRIC_INITIAL_ATTESTATION>
         $<$<OR:$<VERSION_GREATER:${TFM_ISOLATION_LEVEL},1>,$<STREQUAL:"${TEST_PSA_API}","IPC">>:CONFIG_TFM_ENABLE_MEMORY_PROTECT>
+        $<$<AND:$<BOOL:${TFM_PXN_ENABLE}>,$<STREQUAL:${CMAKE_SYSTEM_ARCHITECTURE},armv8.1-m.main>>:TFM_PXN_ENABLE>
 )
 
 #========================= Platform Non-Secure ================================#
