SPM: Add a "connection_based" flag for service
Add a "connection_based" flag in service static data to
indicate whether a service is stateless. The flag is
valid only when the FF-M version greater than 1.0.

Change-Id: I18210e93f7709fbdc2bfdf026f7d739a683183d5
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/secure_fw/partitions/tfm_service_list.inc.template
+++ b/secure_fw/partitions/tfm_service_list.inc.template
@@ -37,6 +37,11 @@ const struct tfm_spm_service_db_t service_db[] =
             {% else %}
         .non_secure_client = false,
             {% endif %}
+            {% if partition.manifest.psa_framework_version > 1.0 and service.connection_based is sameas false %}
+        .connection_based = false,
+            {% else %}
+        .connection_based = true,
+            {% endif %}
             {% if service.version %}
         .version = {{service.version}},
             {% else %}
