--- a/secure_fw/spm/cmsis_psa/tfm_secure_irq_handlers_ipc.inc.template
+++ b/secure_fw/spm/cmsis_psa/tfm_secure_irq_handlers_ipc.inc.template
@@ -66,16 +66,11 @@ void {{handler.source}}_Handler(void)
 #error "Interrupt source isn't provided for 'irqs' in partition {{partition.manifest.name}}"
             {% endif %}
 {
-    __disable_irq();
-    /* It is OK to call tfm_irq_handler directly from here, as we are already
-     * in handler mode, and we will not be pre-empted as we disabled interrupts
-     */
             {% if handler.source %}
-    tfm_irq_handler({{partition.manifest.name}}, {{handler.signal}}, {{handler.source}});
+    tfm_set_irq_signal({{partition.manifest.name}}, {{handler.signal}}, {{handler.source}});
             {% else %}
 #error "Interrupt source isn't provided for 'irqs' in partition {{partition.manifest.name}}"
             {% endif %}
-    __enable_irq();
 }
 
         {% endfor %}
