--- a/secure_fw/spm/cmsis_psa/tfm_spm_db_ipc.inc.template
+++ b/secure_fw/spm/cmsis_psa/tfm_spm_db_ipc.inc.template
@@ -10,6 +10,7 @@
 #ifndef __TFM_SPM_DB_IPC_INC__
 #define __TFM_SPM_DB_IPC_INC__
 
+#include "array.h"
 #include "psa_manifest/sid.h"
 
 {# Produce a build error if heap_size is presented in the manifest, because of the dynamic memory allocation is not supported now. #}
@@ -228,7 +229,7 @@ static struct partition_t partition_list [] =
 };
 
 struct spm_partition_db_t g_spm_partition_db = {
-    .partition_count = sizeof(partition_list) / sizeof(partition_list[0]),
+    .partition_count = ARRAY_SIZE(partition_list),
     .partitions = partition_list,
 };
 
