--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -81,7 +81,8 @@ if(BL2)
 
     target_compile_options(bl2_mbedcrypto
         PRIVATE
-            -Wno-unused-parameter
+            $<$<C_COMPILER_ID:GNU>:-Wno-unused-parameter>
+            $<$<C_COMPILER_ID:ARMClang>:-Wno-unused-parameter>
     )
 
     #Include platform specific defs (registers etc)
@@ -160,7 +161,8 @@ target_compile_definitions(crypto_service_mbedcrypto
 
 target_compile_options(crypto_service_mbedcrypto
     PRIVATE
-        -Wno-unused-parameter
+        $<$<C_COMPILER_ID:GNU>:-Wno-unused-parameter>
+        $<$<C_COMPILER_ID:ARMClang>:-Wno-unused-parameter>
 )
 
 #Include platform specific defs (registers etc)
