--- a/trusted-firmware-m/tools/tfm_psa_ff_test_manifest_list.yaml
+++ b/trusted-firmware-m/tools/tfm_psa_ff_test_manifest_list.yaml
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2021, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -20,7 +20,7 @@
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 271,
+      "pid": 512,
       "linker_pattern": {
         "library_list":[
           "*client_partition.a"
@@ -39,7 +39,7 @@
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 272,
+      "pid": 513,
       "linker_pattern": {
         "library_list":[
           "*server_partition.a"
@@ -58,7 +58,7 @@
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 273,
+      "pid": 514,
       "linker_pattern": {
         "library_list":[
           "*driver_partition.a"
