--- a/secure_fw/partitions/partition_load_info.template
+++ b/secure_fw/partitions/partition_load_info.template
@@ -56,8 +56,19 @@ REGION_DECLARE(Image$$, PT_{{manifest.name}}_PRIVATE, _DATA_END$$Base);
 #endif
 extern uint8_t {{manifest.name|lower}}_stack[];
 
+{% if manifest.entry_init and manifest.entry_point %}
+#error "Both manifest.entry_init and manifest.entry_point exist, unsupported!"
+{% elif (manifest.model == "IPC" or manifest.psa_framework_version == 1.0) and (not manifest.entry_point) %}
+#error "The entry_point attribute is required, it should not be empty!"
+{% elif manifest.model == "SFN" and manifest.entry_point %}
+#error "The entry_point attribute should not be exist in SFN mode!"
+{% endif %}
 /* Entrypoint function declaration */
+{% if manifest.entry_point %}
 extern void {{manifest.entry_point}}(void);
+{% elif manifest.entry_init %}
+extern psa_status_t {{manifest.entry_init}}(void);
+{% endif %}
 
 /* partition load info type definition */
 struct partition_{{manifest.name|lower}}_load_info_t {
@@ -97,9 +108,7 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
 {% endif %}
         .pid                        = {{manifest.name}},
         .flags                      = 0
-{% if manifest.psa_framework_version == 1.0 and attr.tfm_partition_ipc is sameas true %}
-                                    | SPM_PART_FLAG_IPC
-{% elif manifest.psa_framework_version == 1.1 and manifest.model == "IPC" %}
+{% if (manifest.psa_framework_version == 1.1 and manifest.model == "IPC") or manifest.psa_framework_version == 1.0 %}
                                     | SPM_PART_FLAG_IPC
 {% endif %}
 {% if manifest.type == "PSA-ROT" %}
@@ -108,7 +117,13 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
 #error "Unsupported type '{{manifest.type}}' for partition '{{manifest.name}}'!"
 {% endif %}
                                     | PARTITION_PRI_{{manifest.priority}},
+{% if manifest.entry_point %}
         .entry                      = ENTRY_TO_POSITION({{manifest.entry_point}}),
+{% elif manifest.entry_init %}
+        .entry                      = ENTRY_TO_POSITION({{manifest.entry_init}}),
+{% else %}
+        .entry                      = NULL,
+{% endif %}
         .stack_size                 = {{manifest.stack_size}},
         .heap_size                  = 0,
         .ndeps                      = {{(manifest.name|upper + "_NDEPS")}},
@@ -130,7 +145,11 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
     {% for service in manifest.services %}
         {
             .name_strid             = STRING_PTR_TO_STRID("{{service.name}}"),
+{% if manifest.psa_framework_version == 1.1 and manifest.model == "SFN" %}
+            .sfn                    = ENTRY_TO_POSITION({{service.name|lower}}_sfn),
+{% else %}
             .signal                 = {{service.name}}_SIGNAL,
+{% endif %}
             .sid                    = {{service.sid}},
             .flags                  = 0
         {% if service.non_secure_clients is sameas true %}
