--- a/secure_fw/spm/cmsis_psa/tfm_spm_db_ipc.inc.template
+++ b/secure_fw/spm/cmsis_psa/tfm_spm_db_ipc.inc.template
@@ -140,8 +140,14 @@ const struct partition_static_t static_data_list[] =
 #endif
         .priority             = TFM_PRIORITY_LOW,
         .entry                = tfm_nspm_thread_entry,
-        .stack_base_addr      = 0,
-        .stack_size           = 0
+        .stack_base_addr      = PART_REGION_ADDR(ARM_LIB_STACK, $$ZI$$Base),
+        .stack_size           = S_PSP_STACK_SIZE,
+#if TFM_LVL == 3
+        .mems                 = {
+            .start              = PART_REGION_ADDR(ARM_LIB_STACK, $$ZI$$Base),
+            .limit              = PART_REGION_ADDR(ARM_LIB_STACK, $$ZI$$Limit),
+        },
+#endif
     },
 
 {% for partition in partitions %}
@@ -172,8 +178,8 @@ const struct partition_static_t static_data_list[] =
                               ,
         .priority             = TFM_PRIORITY({{partition.manifest.priority}}),
         .entry                = {{partition.manifest.entry_point}},
-        .stack_base_addr      = 0,
-        .stack_size           = 0,
+        .stack_base_addr      = (uint32_t){{partition.manifest.name.lower()}}_stack,
+        .stack_size           = (uint32_t){{partition.manifest.stack_size}},
     {% if partition.manifest.mmio_regions %}
         .platform_data        = (uintptr_t)platform_data_list_{{partition.manifest.name}},
     {% else %}{# if partition.manifest.mmio_regions #}
@@ -185,38 +191,12 @@ const struct partition_static_t static_data_list[] =
     {% else %}
         .deps                 = NULL,
     {% endif %}
-    {{'},'}}
-    {% if partition.attr.conditional %}
-#endif /* {{partition.attr.conditional}} */
-    {% endif %}
-
-{% endfor %}
-};
-
-/**************************************************************************/
-/** The memory data of the partition list */
-/**************************************************************************/
-const struct tfm_spm_partition_memory_data_t memory_data_list[] =
-{
-    {
 #if TFM_LVL == 3
-        .data_start           = PART_REGION_ADDR(ARM_LIB_STACK, $$ZI$$Base),
-        .data_limit           = PART_REGION_ADDR(ARM_LIB_STACK, $$ZI$$Limit),
+        .mems                 = {
+            .start              = PART_REGION_ADDR(PT_{{partition.manifest.name}}_PRIVATE, _DATA_START$$Base),
+            .limit              = PART_REGION_ADDR(PT_{{partition.manifest.name}}_PRIVATE, _DATA_END$$Base),
+        },
 #endif
-        .stack_bottom         = PART_REGION_ADDR(ARM_LIB_STACK, $$ZI$$Base),
-        .stack_top            = PART_REGION_ADDR(ARM_LIB_STACK, $$ZI$$Limit),
-    },
-{% for partition in partitions %}
-    {% if partition.attr.conditional %}
-#ifdef {{partition.attr.conditional}}
-    {% endif %}
-    {{'{'}}
-#if TFM_LVL == 3
-        .data_start           = PART_REGION_ADDR(PT_{{partition.manifest.name}}_PRIVATE, _DATA_START$$Base),
-        .data_limit           = PART_REGION_ADDR(PT_{{partition.manifest.name}}_PRIVATE, _DATA_END$$Base),
-#endif
-        .stack_bottom         = (uint32_t){{partition.manifest.name.lower()}}_stack,
-        .stack_top            = (uint32_t)({{partition.manifest.name.lower()}}_stack + {{partition.manifest.stack_size}}),
     {{'},'}}
     {% if partition.attr.conditional %}
 #endif /* {{partition.attr.conditional}} */
