FIH: Split FIH library into headers and impl
In order to work with BL1 code-sharing. Create generic hal target to
avoid having to link to platform_s.

Change-Id: Id138b2a5e37790ffc482b2b3afdd9dbab2d7ba04
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -69,7 +69,7 @@ target_link_libraries(platform_s
     PUBLIC
         platform_common_interface
         platform_region_defs
-        tfm_fih
+        tfm_fih_headers
     PRIVATE
         psa_interface
         tfm_secure_api
