Build: Allow configuration of TF-M flash area
To avoid TF-M having to be in flash_area 0, and allow the flash layout
to be more configurable.

Change-Id: I2fd5862c679dc208901462bc3ca1ba6417175722
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -77,8 +77,8 @@ configure_file(include/mcuboot_config/mcuboot_config.h.in
 
 find_package(Python3)
 
-set(FLASH_AREA_NUM 0)
 set(IMAGE_TYPE "S_IMAGE")
+set(FLASH_AREA_NUM ${MCUBOOT_S_IMAGE_FLASH_AREA_NUM})
 if (MCUBOOT_IMAGE_NUMBER GREATER 1)
     configure_file(signing_layout.c.in signing_layout_s.c @ONLY)
     add_library(signing_layout_s OBJECT ${CMAKE_CURRENT_BINARY_DIR}/signing_layout_s.c)
@@ -153,8 +153,8 @@ add_custom_command(OUTPUT tfm_s_signed.bin
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/tfm_s_signed.bin $<TARGET_FILE_DIR:bl2>
 )
 
-set(FLASH_AREA_NUM 1)
 set(IMAGE_TYPE "NS_IMAGE")
+set(FLASH_AREA_NUM ${MCUBOOT_NS_IMAGE_FLASH_AREA_NUM})
 configure_file(signing_layout.c.in signing_layout_ns.c @ONLY)
 
 add_library(signing_layout_ns OBJECT ${CMAKE_CURRENT_BINARY_DIR}/signing_layout_ns.c)
