--- a/secure_fw/partitions/partition_static_info.template
+++ b/secure_fw/partitions/partition_static_info.template
@@ -13,12 +13,13 @@
 #include "load/partition_static_load.h"
 #include "load/partition_defs.h"
 #include "load/service_defs.h"
+#include "load/asset_defs.h"
 #include "tfm_peripherals_def.h"
 #include "psa_manifest/pid.h"
 #include "psa_manifest/sid.h"
 #include "psa_manifest/{{file_name}}.h"
 
-{% set counter = namespace(dep_counter=0, service_counter=0) %}
+{% set counter = namespace(dep_counter=0, service_counter=0, asset_counter=0) %}
 {% if manifest.dependencies %}
     {% for dep in manifest.dependencies %}
         {% set counter.dep_counter = counter.dep_counter + 1 %}
@@ -29,8 +30,18 @@
         {% set counter.service_counter = counter.service_counter + 1 %}
     {% endfor %}
 {% endif %}
+{% if manifest.mmio_regions %}
+    {% for asset in manifest.mmio_regions %}
+        {% set counter.asset_counter = counter.asset_counter + 1 %}
+    {% endfor %}
+{% endif %}
 #define {{"%-55s"|format(manifest.name|upper + "_NDEPS")}} ({{"%d"|format(counter.dep_counter)}})
 #define {{"%-55s"|format(manifest.name|upper + "_NSERVS")}} ({{"%d"|format(counter.service_counter)}})
+#if TFM_LVL == 3
+#define {{"%-55s"|format(manifest.name|upper + "_NASSETS")}} ({{"%d"|format(counter.asset_counter)}} + 1)
+#else
+#define {{"%-55s"|format(manifest.name|upper + "_NASSETS")}} ({{"%d"|format(counter.asset_counter)}})
+#endif
 
 /* Memory region declaration */
 #if TFM_LVL == 3
@@ -41,23 +52,6 @@ extern uint8_t {{manifest.name|lower}}_stack[];
 
 /* Entrypoint function declaration */
 extern void {{manifest.entry_point}}(void);
-
-{% if manifest.mmio_regions %}
-/* Platform data declaration */
-const struct platform_data_t *platform_data_list_{{manifest.name|lower}}[] =
-{
-    {% for region in manifest.mmio_regions %}
-        {% if region.conditional %}
-#ifdef {{region.conditional}}
-        {% endif %}
-    {{region.name}},
-        {% if region.conditional %}
-#endif
-        {% endif %}
-    {% endfor %}
-    NULL
-};
-{% endif %}
 
 /* partition static info type definition */
 struct partition_{{manifest.name|lower}}_static_info_t {
@@ -72,6 +66,13 @@ struct partition_{{manifest.name|lower}}_static_info_t {
 {% if manifest.services %}
     struct service_static_info_t    services[{{(manifest.name|upper + "_NSERVS")}}];
 {% endif %}
+#if TFM_LVL == 3
+    struct asset_desc_t             assets[{{(manifest.name|upper + "_NASSETS")}}];
+#else
+{% if manifest.mmio_regions %}
+    struct asset_desc_t             assets[{{(manifest.name|upper + "_NASSETS")}}];
+{% endif %}
+#endif
 } __attribute__((aligned(4)));
 
 /* Partition static, deps, service static data. Put to a dedicated section. */
@@ -103,17 +104,7 @@ const struct partition_{{manifest.name|lower}}_static_info_t {{manifest.name|low
         .heap_size                  = 0,
         .ndeps                      = {{(manifest.name|upper + "_NDEPS")}},
         .nservices                  = {{(manifest.name|upper + "_NSERVS")}},
-{% if manifest.mmio_regions %}
-        .plat_cookie                = PTR_TO_POSITION(platform_data_list_{{manifest.name|lower}}),
-{% else %}
-        .plat_cookie                = 0,
-{% endif %}
-#if TFM_LVL == 3
-        .mems                       = {
-            .start                    = PART_REGION_ADDR(PT_{{manifest.name}}_PRIVATE, _DATA_START$$Base),
-            .limit                    = PART_REGION_ADDR(PT_{{manifest.name}}_PRIVATE, _DATA_END$$Base),
-        },
-#endif
+        .nassets                    = {{(manifest.name|upper + "_NASSETS")}},
     },
     .stack_pos                      = PTR_TO_POSITION({{manifest.name|lower}}_stack),
     .heap_pos                       = 0,
@@ -152,4 +143,42 @@ const struct partition_{{manifest.name|lower}}_static_info_t {{manifest.name|low
     {% endfor %}
     },
 {% endif %}
+#if TFM_LVL == 3
+    .assets                         = {
+        {
+            .mem.addr_x             = PART_REGION_ADDR(PT_{{manifest.name}}_PRIVATE, _DATA_START$$Base),
+            .mem.addr_y             = PART_REGION_ADDR(PT_{{manifest.name}}_PRIVATE, _DATA_END$$Base),
+            .attr                   = ASSET_MEM_RD_BIT | ASSET_MEM_WR_BIT,
+        },
+{% for region in manifest.mmio_regions %}
+    {% if region.conditional %}
+#ifdef {{region.conditional}}
+    {% endif %}
+        {
+            .dev.addr_ref           = PTR_TO_POSITION({{region.name}}),
+            .attr                   = ASSET_DEV_REF_BIT,
+        },
+    {% if region.conditional %}
+#endif
+    {% endif %}
+{% endfor %}
+    }
+#else
+{% if manifest.mmio_regions %}
+    .assets                         = {
+    {% for region in manifest.mmio_regions %}
+        {% if region.conditional %}
+#ifdef {{region.conditional}}
+        {% endif %}
+        {
+            .dev.addr_ref           = PTR_TO_POSITION({{region.name}}),
+            .attr                   = ASSET_DEV_REF_BIT,
+        },
+        {% if region.conditional %}
+#endif
+        {% endif %}
+    {% endfor %}
+    }
+{% endif %}
+#endif
 };
