BOOT: Fix include path for MCUBOOT_FIH_PROFILE HIGN
conf dir path is needed to compile mcuboot-src file
bootutil/src/fault_injection_hardening_delay_rng_mbedtls.c

Change-Id: I547b37f067bed14e2acdd936402b95349b3790f1
Signed-off-by: Michel Jaouen <michel.jaouen@st.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory("${MCUBOOT_PATH}/boot/bootutil" bootutil)
 target_include_directories(bootutil
     PUBLIC
         include
+        config
 )
 
 target_link_libraries(bootutil
