Docs: Secure Partition Manager
An overall design document for Secure Partition Manager. Covers
FF-M compliance and implementation defined features.

Change-Id: Ia2ac487918e17c2c0ce1b442c5cb8497f64393eb
Signed-off-by: Ken Liu <Ken.Liu@arm.com>

--- a/docs/conf.py.in
+++ b/docs/conf.py.in
@@ -138,6 +138,16 @@ rst_prolog = """
 .. |TFM_VERSION| replace:: @SPHINXCFG_TFM_VERSION@
 """
 
+# Enable figures and tables auto numbering
+numfig = True
+numfig_secnum_depth = 0
+numfig_format = {
+    'figure': 'Figure %s:',
+    'table': 'Table %s:',
+    'code-block': 'Listing %s:',
+    'section': '%s'
+}
+
 # -- Options for LaTeX output ------------------------------------------------
 
 latex_elements = {
