SPM: Convert SVC number to uint8_t
SVC number encoded in SVC instruction is 8-bit long.
Currently it relies on the short-enum compiler option to have a
8-bit long SVC number type.

This patch converts the enum to uint8_t for SVC number and divids
the SVC numbers to two parts for IPC model:
 - 0x0 ~ 0x7F for SVC calls only allowed from Thread Mode
 - 0x80 ~ 0xFF for SVC calls only allowed from interrupt handling

Note: For library model, the SVC numbers have no restrictions.

Since the requirements for SVC number assignment are different,
this patch also split the SVC number header for IPC and Library models.

Change-Id: I0fb4dd110be6bab05e1c4b9a8fc55e1b8bfbc0eb
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -157,7 +157,8 @@ target_link_libraries(tfm_secure_api
 target_include_directories(tfm_secure_api
     INTERFACE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-        $<$<BOOL:${TFM_PSA_API}>:${CMAKE_CURRENT_SOURCE_DIR}/model_ipc/include>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/interface>
+        $<$<NOT:$<BOOL:${TFM_PSA_API}>>:${CMAKE_CURRENT_SOURCE_DIR}/cmsis_func/include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/arch/include>
 )
 
