Test: Refactor IRQ Testing
This patch:
 - Replaces the tfm_irq_test_service_1 with the tfm_slih_test_service
 - Docs update:
   - Remove the out-of-date tfm_non-secure_interrupt_handling.rst
   - Remove IRQ test part in core_test_services_integration_guide.rst
     as core test does not participate in IRQ testing anymore.

Note:
  The new SLIH testing does not support Library Model.

Change-Id: I578d43ca7a363cdcb298226cc9ebad5f7b66fb48
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -98,7 +98,7 @@ target_link_libraries(platform_ns
 
 target_compile_definitions(platform_ns
     PRIVATE
-        $<$<BOOL:${TFM_IRQ_TEST}>:TFM_ENABLE_IRQ_TEST>
+        $<$<BOOL:${TFM_ENABLE_SLIH_TEST}>:TFM_ENABLE_SLIH_TEST>
         $<$<BOOL:${TFM_PERIPH_ACCESS_TEST}>:TFM_ENABLE_PERIPH_ACCESS_TEST>
 )
 
