--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -182,22 +182,6 @@
       }
     },
     {
-      "name": "TFM IRQ Test Service 1",
-      "short_name": "TFM_IRQ_TEST_1",
-      "manifest": "${TFM_TEST_PATH}/test_services/tfm_irq_test_service_1/tfm_irq_test_service_1.yaml",
-      "source_path": "${TFM_TEST_PATH}",
-      "tfm_partition_ipc": true,
-      "conditional": "TFM_ENABLE_IRQ_TEST",
-      "version_major": 0,
-      "version_minor": 1,
-      "pid": 267,
-      "linker_pattern": {
-        "library_list": [
-           "*tfm_*partition_irq_test_1.*"
-         ]
-      }
-    },
-    {
       "name": "TF-M PS Test Service",
       "short_name": "TFM_SP_PS_TEST",
       "manifest": "${TFM_TEST_PATH}/test_services/tfm_ps_test_service/tfm_ps_test_service.yaml",
@@ -288,6 +272,21 @@
       "linker_pattern": {
         "library_list": [
            "*tfm_*partition_attest_test_service.*"
+         ]
+      }
+    },
+    {
+      "name": "TFM SLIH Test Service",
+      "short_name": "TFM_SP_SLIH_TEST",
+      "manifest": "${TFM_TEST_PATH}/test_services/tfm_slih_test_service/tfm_slih_test_service.yaml",
+      "source_path": "${TFM_TEST_PATH}",
+      "tfm_partition_ipc": true,
+      "conditional": "TFM_ENABLE_SLIH_TEST",
+      "version_major": 0,
+      "version_minor": 1,
+      "linker_pattern": {
+        "library_list": [
+           "*tfm_*partition_slih_test.*"
          ]
       }
     },
